<resources>
    <string name="app_name">Peleitas</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="luis_enrique">Luis Enrique</string>
    <string name="name">Name</string>
    <string name="registrarse_ingresar">Registrarse/Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="altura">Altura</string>
    <string name="opcional">(opcional)</string>
    <string name="peso">Peso</string>
    <string name="ingresar">Ingresar</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="registrar">Registrar</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="pelear">A pelear</string>

</resources>